--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_screenutil: ^5.7.0
   flutter_svg: ^2.0.5
   stacked: ^3.2.1
+  stacked_services: ^1.0.2
 
 dev_dependencies:
   build_runner: ^2.3.3
@@ -55,7 +56,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/svgs
+    - assets/svgs/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
