--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.18.1
   stacked: ^3.2.1
   stacked_services: ^1.0.2
+  uuid: ^3.0.7
 
 dev_dependencies:
   build_runner: ^2.3.3
