--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,15 @@ environment:
 dependencies:
   calendar_date_picker2: ^0.5.2
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.6
   flutter_screenutil: ^5.7.0
   flutter_svg: ^2.0.5
+  hive_flutter: ^1.1.0
   intl: ^0.18.1
+  logger: ^1.3.0
   stacked: ^3.2.1
   stacked_services: ^1.0.2
   uuid: ^3.0.7
